apps/openbao/base/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openbao
  labels:
    name: openbao
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
