apps/openbao/base/resources/virtual-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-openbao
  namespace: openbao
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: https-openbao
  hostnames:
    - openbao.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openbao
          port: 8200
